[project]
name = "fast-webp-to-mp4"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = ["pillow"]

[project.scripts]
fast-webp-to-mp4 = "fast_webp_to_mp4:main"

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = ["*.py"]
